--- a/zodiacHTML/tiger.html
+++ b/zodiacHTML/tiger.html
@@ -23,7 +23,7 @@
       <a href="../zodiac.html">Wróć</a>
     </nav>
     <div class="body-zodiac" data-sign="tiger">
-      <h3 class="zodiac-title">Którym typem bawoła jesteś?</h3>
+      <h3 class="zodiac-title">Którym typem tygrysa jesteś?</h3>
       <table>
         <tr>
           <th>Typ znaku</th>
@@ -33,56 +33,78 @@
         <tr>
           <td>
             <span class="icon wood">🌳</span
-            ><span class="sign-name">Bawół (Drzewo)</span>
+            ><span class="sign-name">Tygrys (Drzewo)</span>
           </td>
-          <td></td>
+          <td>1974</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >spokojny, kamuflujący się, silny, opiekuńczy i zwinny</span
+            >
+            <span class="negative"
+              >zamknięty, groźny, mroczny, nieprzewidywalny i samotny</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon fire">🔥</span
-            ><span class="sign-name">Bawół (Ogień)</span>
+            ><span class="sign-name">Tygrys (Ogień)</span>
           </td>
-          <td></td>
+          <td>1926, 1986</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >charyzmatyczny, potężny, odważny, zdeterminowany i
+              inspirujący</span
+            >
+            <span class="negative"
+              >porywczy, nibezpieczny, niestabilny, samotny i
+              wyniszczający</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon earth">🌍</span
-            ><span class="sign-name">Bawół (Ziemia)</span>
+            ><span class="sign-name">Tygrys (Ziemia)</span>
           </td>
-          <td></td>
+          <td>1938, 1998</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >wytrzymały, stabilny, lojalny, potężny i cichy</span
+            >
+            <span class="negative"
+              >powolny, uparty, zamknięty, ciężki i niewzruszony</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon metal">⚙️</span
-            ><span class="sign-name">Bawół (Metal)</span>
+            ><span class="sign-name">Tygrys (Metal)</span>
           </td>
-          <td></td>
+          <td>1950, 2010</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >niezłomny, precyzyjny, zorganizowany, odporny i nowoczesny</span
+            >
+            <span class="negative"
+              >zimny, bezwzględny, sztywny, hałaśliwy i izolowany</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon water">💧</span
-            ><span class="sign-name">Bawół (Woda)</span>
+            ><span class="sign-name">Tygrys (Woda)</span>
           </td>
-          <td></td>
+          <td>1962, 2022</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >zwinny, tejemniczy, intuicyjny, elastyczny i uspokajający</span
+            >
+            <span class="negative"
+              >zmienny, zamknięty, nieuchwytny i samotniczy</span
+            >
           </td>
         </tr>
       </table>
