--- a/zodiacHTML/monkey.html
+++ b/zodiacHTML/monkey.html
@@ -23,7 +23,7 @@
       <a href="../zodiac.html">Wróć</a>
     </nav>
     <div class="body-zodiac" data-sign="monkey">
-      <h3 class="zodiac-title">Którym typem bawoła jesteś?</h3>
+      <h3 class="zodiac-title">Którym typem małpy jesteś?</h3>
       <table>
         <tr>
           <th>Typ znaku</th>
@@ -33,56 +33,79 @@
         <tr>
           <td>
             <span class="icon wood">🌳</span
-            ><span class="sign-name">Bawół (Drzewo)</span>
+            ><span class="sign-name">Małpa (Drzewo)</span>
           </td>
-          <td></td>
+          <td>1944, 2004</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >zwinna, inteligentna, wesoła, towarzyska i zharmonizowana</span
+            >
+            <span class="negative"
+              >hałaśliwa, niesforna, zaborcza, nieprzewidywalna i
+              dokuczliwa</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon fire">🔥</span
-            ><span class="sign-name">Bawół (Ogień)</span>
+            ><span class="sign-name">Małpa (Ogień)</span>
           </td>
-          <td></td>
+          <td>1956, 2016</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >energetyczna, charyzmatyczna, odważna, zdeterminowana i
+              błyskotliwa</span
+            >
+            <span class="negative"
+              >wybuchowa, nadpobudliwa, zadziorna, uparta i nieposkromiona</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon earth">🌍</span
-            ><span class="sign-name">Bawół (Ziemia)</span>
+            ><span class="sign-name">Małpa (Ziemia)</span>
           </td>
-          <td></td>
+          <td>1968, 2028</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >stabilna, przyziemna, cierpliwa, wytrwała i ostrożna</span
+            >
+            <span class="negative"
+              >powolna, uparta, nieelastyczna, mało towarzyska i toporna</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon metal">⚙️</span
-            ><span class="sign-name">Bawół (Metal)</span>
+            ><span class="sign-name">Małpa (Metal)</span>
           </td>
-          <td></td>
+          <td>1920, 1980</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >zdecydowana, nieugięta, precyzyjna, przenikliwa i
+              zorganizowana</span
+            >
+            <span class="negative"
+              >chłodna, sztywna, bezwględna i dominująca</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon water">💧</span
-            ><span class="sign-name">Bawół (Woda)</span>
+            ><span class="sign-name">Małpa (Woda)</span>
           </td>
-          <td></td>
+          <td>1932, 1992</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >elastyczna, intuicyjna, spokojna, empatyczna i refleksyjna</span
+            >
+            <span class="negative"
+              >niestabilna, pasywna, zamknięta w sobie, uległa i niepewna</span
+            >
           </td>
         </tr>
       </table>
