--- a/zodiacHTML/rat.html
+++ b/zodiacHTML/rat.html
@@ -65,7 +65,7 @@
               >intelektualny, dowcipny i dobrze zorganizowany</span
             >
             <span class="negative"
-              >bywa nieszczery, przewrażliwiony i niemoralny</span
+              >nieszczery, przewrażliwiony i niemoralny</span
             >
           </td>
         </tr>
@@ -77,7 +77,7 @@
           <td>1960, 2020</td>
           <td class="char">
             <span class="positive">skrupulatny, logiczny i dalekowzroczny</span>
-            <span class="negative">bywa narcystyczny, skąpy i plotkarski</span>
+            <span class="negative">narcystyczny, skąpy i plotkarski</span>
           </td>
         </tr>
         <tr>
