--- a/zodiac.html
+++ b/zodiac.html
@@ -20,12 +20,9 @@
   </head>
   <body>
     <header>
-      <div class="custom-header">
-        <nav class="back-zodiac">
-          <a href="./index.html">Wróć</a>
-        </nav>
-      </div>
+      <div class="custom-header"></div>
     </header>
+
     <div class="main-content">
       <div class="zodiac-grid">
         <a href="zodiacHTML/rat.html" class="zodiac-item">
@@ -78,5 +75,8 @@
         </a>
       </div>
     </div>
+    <nav class="back-zodiac">
+      <a href="./index.html">Wróć</a>
+    </nav>
   </body>
 </html>
