--- a/zodiacHTML/ox.html
+++ b/zodiacHTML/ox.html
@@ -35,10 +35,15 @@
             <span class="icon wood">🌳</span
             ><span class="sign-name">Bawół (Drzewo)</span>
           </td>
-          <td></td>
+          <td>1925, 1985</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >silny, stabilny, wytrwały, zrównoważony i pracowity</span
+            >
+            <span class="negative"
+              >uparty, powolny, niekreatywny, nadmiernie konserwatywny i
+              nieczuły</span
+            >
           </td>
         </tr>
         <tr>
@@ -46,10 +51,16 @@
             <span class="icon fire">🔥</span
             ><span class="sign-name">Bawół (Ogień)</span>
           </td>
-          <td></td>
+          <td>1937, 1997</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >energetyczny, odważny, zdeterminowany, pasjonujący i
+              dynamiczny</span
+            >
+            <span class="negative"
+              >porywczy, niekontrolowany, uparty, nadmiernie agresywny i
+              niecierpliwy</span
+            >
           </td>
         </tr>
         <tr>
@@ -57,10 +68,15 @@
             <span class="icon earth">🌍</span
             ><span class="sign-name">Bawół (Ziemia)</span>
           </td>
-          <td></td>
+          <td>1949, 2009</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >solidny, praktyczny, cierpliwy, ugruntowany i wytrwały</span
+            >
+            <span class="negative"
+              >powolny, uparty, niekreatywny, zamknięty w sobie i czasami
+              bierny</span
+            >
           </td>
         </tr>
         <tr>
@@ -68,10 +84,15 @@
             <span class="icon metal">⚙️</span
             ><span class="sign-name">Bawół (Metal)</span>
           </td>
-          <td></td>
+          <td>1961, 2021</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >wytrzymały, zorganizowany, nieugięty, praktyczny i
+              zdecydowany</span
+            >
+            <span class="negative"
+              >sztywny, chłodny, bezwględny, niekreatywny i dominujący</span
+            >
           </td>
         </tr>
         <tr>
@@ -79,10 +100,14 @@
             <span class="icon water">💧</span
             ><span class="sign-name">Bawół (Woda)</span>
           </td>
-          <td></td>
+          <td>1973</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >elastyczny, spokojny, intuicyjny, empatyczny i wytrwały</span
+            >
+            <span class="negative"
+              >niestabilny, pasywny, zamknięty w sobie, uległy i niepewny</span
+            >
           </td>
         </tr>
       </table>
