--- a/zodiacHTML/rat.html
+++ b/zodiacHTML/rat.html
@@ -23,7 +23,7 @@
       <a href="../zodiac.html">Wróć</a>
     </nav>
     <div class="body-zodiac" data-sign="rat">
-      <h3 class="zodiac-title">Którym typem szczura jestes?</h3>
+      <h3 class="zodiac-title">Którym typem szczura jesteś?</h3>
       <table>
         <tr>
           <th>Typ znaku</th>
