--- a/zodiacHTML/rooster.html
+++ b/zodiacHTML/rooster.html
@@ -23,7 +23,7 @@
       <a href="../zodiac.html">Wróć</a>
     </nav>
     <div class="body-zodiac" data-sign="rooster">
-      <h3 class="zodiac-title">Którym typem bawoła jesteś?</h3>
+      <h3 class="zodiac-title">Którym typem koguta jesteś?</h3>
       <table>
         <tr>
           <th>Typ znaku</th>
@@ -33,56 +33,83 @@
         <tr>
           <td>
             <span class="icon wood">🌳</span
-            ><span class="sign-name">Bawół (Drzewo)</span>
+            ><span class="sign-name">Kogut (Drzewo)</span>
           </td>
-          <td></td>
+          <td>1945, 2005</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >wytrwały, odpowiedzialny, spokojny, dumny i mądry</span
+            >
+            <span class="negative"
+              >uparty, zamknięty, zbyt poważny, nadmiernie krytyczny i
+              ostrożny</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon fire">🔥</span
-            ><span class="sign-name">Bawół (Ogień)</span>
+            ><span class="sign-name">Kogut (Ogień)</span>
           </td>
-          <td></td>
+          <td>1957, 2017</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >charyzmatyczny, odważny, pełen pasji, energetyczny i
+              entuzjastyczny</span
+            >
+            <span class="negative"
+              >porywczy, nadmiernie dominujący, niecierpliwy, impulsywny i
+              nadmiernie krytyczny</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon earth">🌍</span
-            ><span class="sign-name">Bawół (Ziemia)</span>
+            ><span class="sign-name">Kogut (Ziemia)</span>
           </td>
-          <td></td>
+          <td>1969, 2029</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >cierpliwy, praktyczny, odpowiedzialny, wytrwały i spokojny</span
+            >
+            <span class="negative"
+              >uparty, zamknięty w sobie, powolny, nieelastyczny i
+              pesymistyczny</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon metal">⚙️</span
-            ><span class="sign-name">Bawół (Metal)</span>
+            ><span class="sign-name">Kogut (Metal)</span>
           </td>
-          <td></td>
+          <td>1921, 1981</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >zdecydowany, zorganizowany, odporny, praktyczny i
+              charyzmatyczny</span
+            >
+            <span class="negative"
+              >sztywny, chłodny, perfekcjonistyczny, uparty i kontrolujący</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon water">💧</span
-            ><span class="sign-name">Bawół (Woda)</span>
+            ><span class="sign-name">Kogut (Woda)</span>
           </td>
-          <td></td>
+          <td>1933, 1993</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >empatyczny, elastyczny, dyplomatyczny, subtelny i
+              intuicyjny</span
+            >
+            <span class="negative"
+              >niezdecydowany, pasywny, zmienny, unikający konfrontacji i
+              skryty</span
+            >
           </td>
         </tr>
       </table>
