--- a/zodiacHTML/snake.html
+++ b/zodiacHTML/snake.html
@@ -23,7 +23,7 @@
       <a href="../zodiac.html">Wróć</a>
     </nav>
     <div class="body-zodiac" data-sign="snake">
-      <h3 class="zodiac-title">Którym typem bawoła jesteś?</h3>
+      <h3 class="zodiac-title">Którym typem węża jesteś?</h3>
       <table>
         <tr>
           <th>Typ znaku</th>
@@ -33,56 +33,81 @@
         <tr>
           <td>
             <span class="icon wood">🌳</span
-            ><span class="sign-name">Bawół (Drzewo)</span>
+            ><span class="sign-name">Wąż (Drzewo)</span>
           </td>
           <td></td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >mądry, przenikliwy, elastyczny, zrównoważony i kreatywny</span
+            >
+            <span class="negative"
+              >skryty, manipulujący, zbyt ostrożny, zamknięty w sobie i
+              zazdrosny</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon fire">🔥</span
-            ><span class="sign-name">Bawół (Ogień)</span>
+            ><span class="sign-name">Wąż (Ogień)</span>
           </td>
           <td></td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >charyzmatyczny, odważny, zdecydowany, inspirujący i
+              intensywny</span
+            >
+            <span class="negative"
+              >impulsywny, zaborczy, mściwy, niestabilny i dominujący</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon earth">🌍</span
-            ><span class="sign-name">Bawół (Ziemia)</span>
+            ><span class="sign-name">Wąż (Ziemia)</span>
           </td>
           <td></td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >stabilny, przemyślany, cichy lider, cierpliwy i niezawodny</span
+            >
+            <span class="negative"
+              >uparty, powolny, zamknięty emocjonalnie, podejrzliwy i zbyt
+              konserwatywny</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon metal">⚙️</span
-            ><span class="sign-name">Bawół (Metal)</span>
+            ><span class="sign-name">Wąż (Metal)</span>
           </td>
           <td></td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >przenikliwy, zdecydowany, precyzyjny, dyscyplinowany i
+              strategiczny</span
+            >
+            <span class="negative"
+              >chłodny emocjonalnie, manipulujący, zbyt surowy, sztywny i
+              izolujący się</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon water">💧</span
-            ><span class="sign-name">Bawół (Woda)</span>
+            ><span class="sign-name">Wąż (Woda)</span>
           </td>
           <td></td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >intuicyjny, elastyczny, empatyczny, tajemniczy i twórczy</span
+            >
+            <span class="negative"
+              >niezdecydowany, skryty, pasywny, zmienny i ucieczkowy</span
+            >
           </td>
         </tr>
       </table>
