--- a/zodiacHTML/pig.html
+++ b/zodiacHTML/pig.html
@@ -23,7 +23,7 @@
       <a href="../zodiac.html">Wróć</a>
     </nav>
     <div class="body-zodiac" data-sign="pig">
-      <h3 class="zodiac-title">Którym typem bawoła jesteś?</h3>
+      <h3 class="zodiac-title">Którym typem świni jesteś?</h3>
       <table>
         <tr>
           <th>Typ znaku</th>
@@ -33,56 +33,78 @@
         <tr>
           <td>
             <span class="icon wood">🌳</span
-            ><span class="sign-name">Bawół (Drzewo)</span>
+            ><span class="sign-name">Świnia (Drzewo)</span>
           </td>
-          <td></td>
+          <td>1935, 1995</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >wytrwała, stabilna, pracowita, praktyczna i zorganizowana</span
+            >
+            <span class="negative"
+              >uparta, powolna, niekreatywna, zamknięta
+            </span>
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon fire">🔥</span
-            ><span class="sign-name">Bawół (Ogień)</span>
+            ><span class="sign-name">Świnia (Ogień)</span>
           </td>
-          <td></td>
+          <td>1947, 2007</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >pasjonująca, odważna, zdecydowana, charyzmatyczna,
+              entuzjastyczna</span
+            >
+            <span class="negative"
+              >porywcza, uparta, niekontrolowana, agresywna i niecierpliwa</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon earth">🌍</span
-            ><span class="sign-name">Bawół (Ziemia)</span>
+            ><span class="sign-name">Świnia (Ziemia)</span>
           </td>
-          <td></td>
+          <td>1959, 2019</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >praktyczna, cierpliwa, wytrwała, ugruntowana i solidna</span
+            >
+            <span class="negative"
+              >uparta, powolna, konserwatywna i zamknięta w sobie</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon metal">⚙️</span
-            ><span class="sign-name">Bawół (Metal)</span>
+            ><span class="sign-name">Świnia (Metal)</span>
           </td>
-          <td></td>
+          <td>1971, 2031</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >wytrzymała, zorganizowana, zdecydowana, praktyczna i
+              niezawodna</span
+            >
+            <span class="negative"
+              >sztywna, chłodna, bezwględna, niekreatywna i dominująca</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon water">💧</span
-            ><span class="sign-name">Bawół (Woda)</span>
+            ><span class="sign-name">Świnia (Woda)</span>
           </td>
-          <td></td>
+          <td>1923, 1983</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >elastyczna, empatyczna, spokojna, intuicyjna i wytrwała</span
+            >
+            <span class="negative"
+              >niestabilna, pasywna, zamknięta w sobie, uległa i niepewna</span
+            >
           </td>
         </tr>
       </table>
