--- a/zodiacHTML/rabbit.html
+++ b/zodiacHTML/rabbit.html
@@ -23,7 +23,7 @@
       <a href="../zodiac.html">Wróć</a>
     </nav>
     <div class="body-zodiac" data-sign="rabbit">
-      <h3 class="zodiac-title">Którym typem bawoła jesteś?</h3>
+      <h3 class="zodiac-title">Którym typem królika jesteś?</h3>
       <table>
         <tr>
           <th>Typ znaku</th>
@@ -33,56 +33,80 @@
         <tr>
           <td>
             <span class="icon wood">🌳</span
-            ><span class="sign-name">Bawół (Drzewo)</span>
+            ><span class="sign-name">Królik (Drzewo)</span>
           </td>
-          <td></td>
+          <td>1975</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >łagodny, uważny, zrównoważony, harmonijny i twórczy</span
+            >
+            <span class="negative"
+              >nieśmiały, zbyt ostrożny, wrażliwy, zamyślony i bierny</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon fire">🔥</span
-            ><span class="sign-name">Bawół (Ogień)</span>
+            ><span class="sign-name">Królik (Ogień)</span>
           </td>
-          <td></td>
+          <td>1927, 1987</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >żywiołowy, charyzmatyczny, zdecydowany, odważny, zaraźliwie
+              entuzjastyczny</span
+            >
+            <span class="negative"
+              >impulsywny, porywczy, niecierpliwy, niestabilny i nadmiernie
+              ambitny</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon earth">🌍</span
-            ><span class="sign-name">Bawół (Ziemia)</span>
+            ><span class="sign-name">Królik (Ziemia)</span>
           </td>
-          <td></td>
+          <td>1939, 1999</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >cierpliwy, przyziemny, spokojny, zorganizowany i lojalny
+            </span>
+            <span class="negative"
+              >zbyt ostrożny, uparty, powolny, mało spontaniczny i skryty</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon metal">⚙️</span
-            ><span class="sign-name">Bawół (Metal)</span>
+            ><span class="sign-name">Królik (Metal)</span>
           </td>
-          <td></td>
+          <td>1951, 2011</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >zdecydowany, precyzyjny, zorganizowany, ambitny i odporny</span
+            >
+            <span class="negative"
+              >sztywny, chłodny, perfekcjonistyczny, uparty i nadmiernie
+              kontrolujący</span
+            >
           </td>
         </tr>
         <tr>
           <td>
             <span class="icon water">💧</span
-            ><span class="sign-name">Bawół (Woda)</span>
+            ><span class="sign-name">Królik (Woda)</span>
           </td>
-          <td></td>
+          <td>1963, 2023</td>
           <td class="char">
-            <span class="positive"></span>
-            <span class="negative"></span>
+            <span class="positive"
+              >empatyczny, elastyczny, intuicyjny, dyplomatyczny i
+              subtelny</span
+            >
+            <span class="negative"
+              >niezdecydowany , zbyt wrażliwy, skryty, pasywny i uległy</span
+            >
           </td>
         </tr>
       </table>
