--- a/zodiacHTML/ox.html
+++ b/zodiacHTML/ox.html
@@ -111,6 +111,84 @@
           </td>
         </tr>
       </table>
+      <section class="section-zodiac">
+        <h4 class="zodiac-name"><strong>Osobisty horoskop</strong></h4>
+        <p class="zodiac-description">
+          <strong
+            >Budowniczy fundamentów, strażnik spokoju, uosobienie niezłomnej
+            siły</strong
+          ><br />
+          Bawół nie szuka światła reflektorów – on tworzy trwałe struktury, na
+          których inni mogą się oprzeć. Jest jak ziemia: cicha, stała, żyzna –
+          ale nieustępliwa, gdy próbuje się ją zlekceważyć. To znak wytrwałości
+          i powagi, rzadko ponaglany emocją. Nie mówi dużo, lecz każde jego
+          słowo ma wagę. Nie działa szybko, ale jego kroki zostawiają ślad.<br />
+          To energia oparta na cierpliwości – na robieniu rzeczy dobrze,
+          niekoniecznie szybko. W świecie pełnym hałasu, Bawół pozostaje wierny
+          sobie. Jego milczenie nie jest słabością, lecz siłą, która nie
+          potrzebuje potwierdzenia z zewnątrz.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Charakter i osobowość</strong></h4>
+        <p class="zodiac-description">
+          Bawół to uosobienie dyscypliny. Nie szuka dróg na skróty – wybiera
+          szlaki, które wymagają pracy, ale prowadzą do czegoś prawdziwego.
+          Cierpliwy, dokładny, wierzy w wartość wysiłku. Dla innych może wydawać
+          się powolny – w rzeczywistości to on dotrze najdalej.<br />
+          Ma silne poczucie sprawiedliwości i lojalności. Nie znosi chaosu,
+          niesłowności i pustych obietnic. W środku może skrywać gniew, który
+          wybucha rzadko – ale zostawia ślad głęboki jak bruzda w polu. To nie
+          złość – to ostateczna odpowiedź na naruszenie jego granic.<br />
+          Nie potrzebuje przewodnika. Sam dla siebie jest kompasem.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Bawół i pieniądze</strong></h4>
+        <p class="zodiac-description">
+          Ostrożny, konsekwentny, praktyczny. Dla Bawołu pieniądze to narzędzie
+          stabilizacji – nie błyskotliwa gra, lecz odpowiedzialność. Unika
+          ryzyka, wybiera mądre inwestycje. Woli wolniejszy zysk, jeśli oznacza
+          on spokój i niezależność.<br />
+          Nie szasta – planuje. Nie wydaje, by zaimponować – lecz by
+          zabezpieczyć przyszłość swoją i bliskich.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Relacje i miłość</strong></h4>
+        <p class="zodiac-description">
+          Bawół nie zakochuje się lekko – ale gdy już otworzy serce, jego
+          lojalność jest niepodważalna. To partner oparty na czynie, nie słowie.
+          Nie romantyczny gest, lecz obecność, opieka i konkretna troska.<br />
+          Bywa zazdrosny, bo nie lubi niepewności. Wierność traktuje jak wartość
+          absolutną. W domu – filar. W związku – ostoja. Potrzebuje relacji,
+          które są ciche, głębokie i... prawdziwe.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Mężczyzna Bawół</strong></h4>
+        <p class="zodiac-description">
+          Cichy lider, który prowadzi nie przez słowa, lecz przykładem. Silny,
+          opanowany, niezależny. Nie szuka zachwytu – buduje zaufanie. W pracy –
+          niezastąpiony. W miłości – stały jak skała. Może być zbyt poważny, ale
+          nigdy fałszywy.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Kobieta Bawół</strong></h4>
+        <p class="zodiac-description">
+          Wewnętrzna siła ubrana w spokój. Niezłomna, odporna na trendy i cudze
+          oczekiwania. W relacjach lojalna do bólu, w pracy – nie do
+          zatrzymania. Wymaga wiele – od siebie i od innych. Ale to właśnie z
+          nią można zbudować coś prawdziwego, coś trwałego.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Podsumowanie</strong></h4>
+        <p class="zodiac-description">
+          Znak Bawołu to nie błysk, lecz solidność.<br />
+          Nie słowa, lecz czyny.<br />
+          Nie impuls, lecz decyzja.<br />
+          To on niesie plony przez czas.<br />
+          To on buduje mosty, które przetrwają pokolenia.<br />
+          Jeśli pragniesz ciszy, która daje oparcie – wejdź w rytm kroków
+          Bawołu.
+        </p>
+      </section>
     </div>
   </body>
 </html>
