--- a/zodiacHTML/rabbit.html
+++ b/zodiacHTML/rabbit.html
@@ -110,6 +110,91 @@
           </td>
         </tr>
       </table>
+      <section class="section-zodiac">
+        <h4 class="zodiac-name"><strong>Osobisty horoskop</strong></h4>
+        <p class="zodiac-description">
+          <strong
+            >Strażnik spokoju, mistrz dyplomacji, uosobienie wdzięku i refleksji
+          </strong>
+          Królik nie szuka świateł reflektorów. To znak, który zamiast hałasu
+          wybiera szept, zamiast walki – harmonię. Jego siłą nie jest krzyk,
+          lecz cicha konsekwencja.<br />
+          W świecie pełnym zgiełku, Królik chroni swoją przestrzeń – emocjonalną
+          i fizyczną. Ceni piękno, miękkość, łagodność – ale nie jest słaby. Gdy
+          przekroczy się jego granice, potrafi zaskoczyć siłą, która płynie z
+          wnętrza.<br />
+          To znak głębokiej wrażliwości i wyostrzonej intuicji. Widzi więcej niż
+          mówi. Czuje więcej, niż pokazuje. Jego życie to sztuka unikania burz,
+          nie ucieczki – lecz mądrego unikania zbędnych strat.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Charakter i osobowość</strong></h4>
+        <p class="zodiac-description">
+          Królik to uważny obserwator – delikatny, lecz zdecydowany. Jego
+          inteligencja jest cicha, ale bystra. Woli działać zza kulis, subtelnie
+          wpływając na bieg wydarzeń.<br />
+
+          Nie odnajduje się w brutalnych realiach – potrzebuje ładu, zaufania i
+          estetyki. W relacjach – lojalny i czuły, lecz łatwo ranią go
+          nielicujące słowa lub nadmierna presja. Może wycofać się bez słowa –
+          nie z obojętności, ale z potrzeby ochrony siebie.<br />
+
+          Królik to esencja klasy. Nie rzuca się w oczy – ale zostaje w pamięci.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Królik i pieniądze</strong></h4>
+        <p class="zodiac-description">
+          Nie ryzykuje bez potrzeby. Woli stabilność i przemyślane działania.
+          Buduje majątek cierpliwie, często po cichu, ale z wyczuciem.<br />
+
+          Pieniądze są dla niego środkiem do zapewnienia bezpieczeństwa – nie
+          symbolem statusu. Inwestuje w to, co piękne, użyteczne i trwałe.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Relacje i miłość</strong></h4>
+        <p class="zodiac-description">
+          Królik kocha spokojnie, wiernie i z głębi serca. Unika dramatów i
+          emocjonalnych burz. Wybiera partnera, który da mu poczucie
+          bezpieczeństwa i bliskości – bez dominacji.<br />
+
+          Lubi rytuały codzienności: wspólna herbata, delikatny dotyk, ciepło
+          słów. Nie szuka ognia – szuka światła, które nie parzy.<br />
+
+          Dla Królika dom to świątynia spokoju – a miłość to czułość, która nie
+          krzyczy.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Mężczyzna Królik</strong></h4>
+        <p class="zodiac-description">
+          Elegancki, wyważony, uważny. Nie potrzebuje mówić głośno – wystarczy,
+          że patrzy i słucha. Jest strategiem życia – analizuje, czuje, wybiera
+          mądrze.<br />
+
+          W miłości – wierny i subtelny. Nie znosi kłótni i niepewności. Gdy
+          kocha, robi to z oddaniem, ale wymaga przestrzeni i szacunku. W pracy
+          – dyplomata, analityk, kreator spokojnych zmian.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Kobieta Królik</strong></h4>
+        <p class="zodiac-description">
+          Delikatna, a jednak niebywale silna wewnętrznie. Czaruje subtelnością,
+          ale kieruje się ostrym umysłem.<br />
+
+          Potrafi dostosować się do sytuacji, ale nigdy kosztem własnych
+          wartości. W miłości – wierna, serdeczna, ale czujna. Unika chaosu –
+          tworzy relacje, które karmią duszę.<br />
+          W pracy – wyczucie, dyplomacja, klasa. W życiu – cicha siła.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Podsumowanie</strong></h4>
+        <p class="zodiac-description">
+          Znak Królika to nie głośne deklaracje – to elegancja gestu.<br />
+          To nie pogoń za światem – to sztuka tworzenia własnej oazy.<br />
+          To nie gra pozorów – to życie w zgodzie z własnym rytmem.<br />
+          Jeśli pragniesz ciszy, która leczy, piękna, które koi, i obecności,
+          która nie dominuje – Królik jest tym, który wskaże ci drogę.
+        </p>
+      </section>
     </div>
   </body>
 </html>
