--- a/zodiacHTML/rat.html
+++ b/zodiacHTML/rat.html
@@ -96,22 +96,15 @@
       </table>
       <section class="section-zodiac">
         <h4 class="zodiac-name"><strong>Osobisty horoskop</strong></h4>
-
         <p class="zodiac-description">
           <strong
             >Mistrz strategii, obserwator ludzkich dusz, poszukiwacz
             możliwości</strong
-          >
-        </p>
-
-        <p class="zodiac-description">
+          ><br />
           Szczur to pierwszy znak chińskiego zodiaku – nic dziwnego, że zawsze
           jest o krok przed innymi. Jego obecność trudno przeoczyć: emanuje
           wdziękiem, przenikliwością i specyficzną aurą, która przyciąga, ale i
-          intryguje.
-        </p>
-
-        <p class="zodiac-description">
+          intryguje.<br />
           To nie jest energia konfrontacji – to siła precyzji, słowa,
           spojrzenia. Szczur wie, kiedy się odezwać, a kiedy milczeć. Kiedy
           działać, a kiedy poczekać. Za maską uprzejmości kryje się
@@ -121,15 +114,11 @@
         <h4 class="zodiac-name"><strong>Charakter i osobowość</strong></h4>
         <p class="zodiac-description">
           Szczur unika bezpośrednich starć – wybiera dyplomację zamiast
-          dominacji. Zamiast naciskać, używa uśmiechu i błyskotliwej riposty.
-        </p>
-        <p class="zodiac-description">
+          dominacji. Zamiast naciskać, używa uśmiechu i błyskotliwej riposty.<br />
           Jest doskonałym obserwatorem – z łatwością wyczuwa nastroje,
           oczekiwania i słabości otoczenia. To czyni go mistrzem adaptacji i...
           subtelnej gry wpływów. Niektórzy widzą w nim manipulanta, inni –
-          geniusza. Jedno jest pewne: Szczur działa skutecznie.
-        </p>
-        <p class="zodiac-description">
+          geniusza. Jedno jest pewne: Szczur działa skutecznie.<br />
           Za jego urokiem kryje się nienasycona ambicja. Nie buja w obłokach –
           planuje, kalkuluje, tworzy plan A, B i C. I zawsze znajdzie sposób, by
           przekształcić najmniejszą szansę w sukces. Jego inteligencja ma w
@@ -140,9 +129,7 @@
         <p class="zodiac-description">
           Nie chodzi o samą chciwość – chodzi o bezpieczeństwo, niezależność,
           swobodę działania. Szczur wie, jak inwestować – nie marnuje, nie traci
-          czasu. Widzi okazje tam, gdzie inni patrzą zbyt późno.
-        </p>
-        <p class="zodiac-description">
+          czasu. Widzi okazje tam, gdzie inni patrzą zbyt późno.<br />
           Jest praktyczny, ale potrafi ryzykować – jeśli nagroda jest tego
           warta.
         </p>
@@ -152,13 +139,9 @@
           W miłości Szczur angażuje się w pełni. Kocha intensywnie i wymaga
           lojalności. Jeśli jednak zostanie zraniony, potrafi odejść bez słowa –
           chłodny, zdystansowany, zamknięty. Na szczęście jego natura nie
-          pozwala mu długo tkwić w smutku.
-        </p>
-        <p class="zodiac-description">
+          pozwala mu długo tkwić w smutku.<br />
           Zbyt wiele jeszcze do odkrycia. Zbyt wiele nowych rozmów, spojrzeń,
-          relacji.
-        </p>
-        <p class="zodiac-description">
+          relacji.<br />
           W towarzystwie błyszczy: zwinny rozmówca, pełen humoru i ciętego
           dowcipu, który nigdy nie traci z oczu swoich celów. Każda wymiana zdań
           to dla niego potencjalna furtka – wartość ukryta pod powierzchnią
@@ -168,13 +151,9 @@
         <h4 class="zodiac-name"><strong>Mężczyzna Szczur</strong></h4>
         <p class="zodiac-description">
           Czarujący i trudny do rozszyfrowania. Łączy błyskotliwość z wyczuciem
-          chwili. Uwodzi słowem, nie siłą.
-        </p>
-        <p class="zodiac-description">
+          chwili. Uwodzi słowem, nie siłą.<br />
           W relacjach lojalny – o ile odnajduje emocjonalną i intelektualną
-          harmonię.
-        </p>
-        <p class="zodiac-description">
+          harmonię.<br />
           W biznesie – wizjoner i negocjator, który zawsze wyprzedza epokę.
         </p>
 
@@ -182,12 +161,8 @@
         <p class="zodiac-description">
           Siła natury z umysłem stratega. Intuicyjna, ambitna, zmysłowa i
           szybka. Wie, jak zdobyć to, czego pragnie – subtelnie, z klasą, z
-          błyskiem w oku.
-        </p>
-        <p class="zodiac-description">
-          W miłości szuka równowagi i intelektualnego partnerstwa.
-        </p>
-        <p class="zodiac-description">
+          błyskiem w oku.<br />
+          W miłości szuka równowagi i intelektualnego partnerstwa.<br />
           Gdy się zaangażuje – jest wierna, lojalna, niezawodna.
         </p>
 
@@ -198,9 +173,7 @@
         <p class="zodiac-description">
           To nie hałas, ale szept.<br />
           Nie siła, ale precyzja.<br />
-          Nie chaos, ale strategia.
-        </p>
-        <p class="zodiac-description">
+          Nie chaos, ale strategia.<br />
           Jeśli chcesz dotrzeć dalej niż inni – warto spojrzeć światu oczami
           Szczura.
         </p>
